Terzo tentativo per risolvere un bug di safari che ignora overflow hidden

--- a/css/style menu.css
+++ b/css/style menu.css
@@ -142,17 +142,11 @@ nav {
     opacity: 1;
     transform: translateY(0px);
 }
-/* 
-body.open, html.open{
-    overflow: hidden;
-} */
 
-#wrapper{
-    height: 100vh;
-}
-
-#wrapper.noScroll {
-    overflow: hidden;
+body.open {
+  position: fixed;
+  width: 100%; /* evita salto orizzontale */
+  overflow-y: scroll; /* mantiene la scrollbar visibile per evitare shift */
 }
 
 /* Grafica e logica toggle light/dark mode */
